--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id= "Yellow">
           <div id= "Green">
             <div id= "Blue">
-              <div id= "Violet">
-                <div></div> <!-- the grandest child div -->
+              <div id= "Indigo">
+                <div id= "Violet"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
